<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_window_blue"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context="ua.tsisar.abetka.activity.CoffeeActivity">

    <Button
        android:id="@+id/button_on_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onBuy"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/coffee" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@+id/button_on_buy"
        android:layout_toStartOf="@+id/button_on_buy"
        android:onClick="onCancel"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/dialog_cancel" />

    <ImageView
        android:id="@+id/image_view_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@mipmap/coffee" />

    <ua.tsisar.abetka.view.StrokeTextView
        android:id="@+id/text_view_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/image_view_coffee"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/are_you_like"
        android:textSize="20sp"
        app:strokeColor="@color/colorWhite"
        app:strokeWidth="2sp" />

</RelativeLayout>
